--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vandosant/scottskender#readme",
   "dependencies": {
     "express": "^4.13.4",
-    "lodash": "^4.12.0"
+    "lodash": "^4.12.0",
+    "mongoose": "^4.4.17"
   }
 }
