--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "mongoose": "^4.4.17"
   },
   "devDependencies": {
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
-    "supertest": "^1.2.0"
+    "supertest": "^1.2.0",
+    "webpack": "^1.13.1"
   }
 }
