--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "lodash": "^4.12.0",
-    "mongoose": "^4.4.17"
+    "mongoose": "^4.4.17",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "supertest": "^1.2.0",
