--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "mocha --require test/helpers/setup.js",
     "build": "webpack",
     "watch": "webpack --watch"
