--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.4",
     "lodash": "^4.12.0",
     "mongoose": "^4.4.17",
+    "nodemon": "^1.9.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
   },
