--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^0.8.6",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "jsonwebtoken": "^7.0.0",
     "lodash": "^4.12.0",
     "mongoose": "^4.4.17",
     "nodemon": "^1.9.2",
