--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "bugs": {
     "url": "https://github.com/vandosant/scottskender/issues"
   },
+  "engines": {
+    "node": ">= 6.0.0"
+  },
   "homepage": "https://github.com/vandosant/scottskender#readme",
   "dependencies": {
     "bcrypt": "^0.8.6",
