Use dotenv to store jwt token secret

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bcrypt": "^0.8.6",
     "body-parser": "^1.15.1",
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "jsonwebtoken": "^7.0.0",
     "lodash": "^4.12.0",
