Setup linting of server files

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon index.js",
     "test": "mocha --require test/helpers/setup.js",
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "lint": "eslint server/**"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
+    "eslint": "^2.11.1",
     "supertest": "^1.2.0",
     "webpack": "^1.13.1"
   }
