--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^4.4.17",
     "nodemon": "^1.9.2",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
