Setup routing to /posts/:id

--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "mongoose": "^4.4.17",
     "nodemon": "^1.9.2",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-router": "^2.4.1"
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
@@ -45,6 +44,7 @@
     "chai": "^3.5.0",
     "eslint": "^2.11.1",
     "supertest": "^1.2.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "yo-yo": "^1.2.1"
   }
 }
