--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^7.0.0",
     "lodash": "^4.12.0",
     "mongoose": "^4.4.17",
+    "morgan": "^1.7.0",
     "nodemon": "^1.9.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
