--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bcrypt": "^0.8.6",
     "body-parser": "^1.15.1",
     "dotenv": "^2.0.0",
+    "es6-promise": "^3.2.1",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.0.0",
     "lodash": "^4.12.0",
     "mongoose": "^4.4.17",
