--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "eslint": "^2.11.1",
+    "mocha": "^4.1.0",
     "supertest": "^1.2.0",
     "webpack": "^1.13.1",
     "yo-yo": "^1.2.1"
