--- a/package.json
+++ b/package.json
@@ -23,32 +23,17 @@
     "node": ">= 6.0.0"
   },
   "homepage": "https://github.com/vandosant/scottskender#readme",
-  "dependencies": {
-    "bcrypt": "^0.8.6",
-    "body-parser": "^1.15.1",
-    "dotenv": "^2.0.0",
-    "es6-promise": "^3.2.1",
-    "express": "^4.13.4",
-    "isomorphic-fetch": "^2.2.1",
-    "jsonwebtoken": "^7.0.0",
-    "lodash": "^4.12.0",
-    "mongoose": "^4.4.17",
-    "morgan": "^1.7.0",
-    "nodemon": "^1.9.2",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0-beta.40",
     "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
-    "chai": "^3.5.0",
     "eslint": "^2.11.1",
-    "mocha": "^4.1.0",
-    "supertest": "^1.2.0",
-    "webpack": "^1.13.1",
-    "yo-yo": "^1.2.1"
+    "html-webpack-plugin": "^3.0.6",
+    "webpack": "^1.15.0",
+    "webpack-cli": "^2.0.10"
   }
 }
